# cxcvbs

./: README.md  pyproject.toml
cxcvbs/: __init__.py  __main__.py  command.py  cx23881.yaml  memory.py  video.py
